[gd_scene load_steps=3 format=3 uid="uid://d3pvb4tlkqpom"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_v16rq"]
[ext_resource type="Texture2D" uid="uid://bndgvtcmnhv3p" path="res://Assets/marker.png" id="2_85foe"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_v16rq")

[node name="Marker" type="TextureRect" parent="."]
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("2_85foe")

[node name="DeathScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DeathScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="DeathScreen/VBoxContainer"]
layout_mode = 2
theme_override_colors/default_color = Color(0.823529, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "[center]YOU DIED!"
fit_content = true

[node name="HBoxContainer" type="HBoxContainer" parent="DeathScreen/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Button" type="Button" parent="DeathScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "RESTART"

[node name="Button2" type="Button" parent="DeathScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "MAINMENU"

[connection signal="pressed" from="DeathScreen/VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="DeathScreen/VBoxContainer/HBoxContainer/Button2" to="." method="_on_button_2_pressed"]
